TopPage: Add header

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Homes#index</h1>
-<p>Find me in app/views/homes/index.html.erb</p>
+<div class="top-menu">
+	<div class="wrapper">			
+    <ul class="nav navbar-nav">
+      <li class="">
+        <a href="/ibs-central/"><span class='text-wrapper'><span class='text-inner-wrapper'>IBS Central</span></span>
+            </a>        
+      </li>
+      <li class="">
+          <a href="/ibs-central/i-have-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>I have IBS</span></span>
+              </a>
+      </li>
+      <li class="">
+          <a href="/about-fodmap-and-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>About FODMAP</span></span>
+              </a>        
+      </li>
+      <li class="">
+          <a href="/online-training/"><span class='text-wrapper'><span class='text-inner-wrapper'>Online Courses</span></span>
+              </a>        
+      </li>
+      <li class=" last">
+          <a href="/product-and-recipe-certification-program/"><span class='text-wrapper'><span class='text-inner-wrapper'>Product and Recipe Certification Program</span></span>
+              </a>        
+      </li>
+    </ul>
+  </div>
+</div>
