--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,44 @@
  *= require_tree .
  *= require_self
  */
+
+/* reset cssを後から入れる */
+ul {
+  list-style: none;
+}
+
+
+
+
+
+.top-menu {
+  background-color: #e6e7e8;
+  height: 50px;
+}
+
+.wrapper {
+  display: block;
+  max-width: 1200px;
+  padding: 0 0;
+  margin: auto;
+  box-sizing: border-box;
+}
+
+.navbar-nav {  
+  display: flex;
+}
+
+.top-menu .navbar-nav li {
+  padding-left: 20px;
+}
+
+.top-menu .navbar-nav li a {
+  height: 50px;
+  display: inline-block;
+  color: #1e1934;
+  font-family: HelveticaNeueW01-67MdCn_692710,Arial,serif;
+  font-size: 15px;
+  text-decoration: none;
+  padding: 15px 0;
+  margin: 0;
+}
