Add a full_title helper

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,25 +1,26 @@
+<% provide(:title, "home") %>
 <div class="top-menu">
 	<div class="wrapper">			
     <ul class="nav navbar-nav">
       <li class="">
         <a href="/ibs-central/"><span class='text-wrapper'><span class='text-inner-wrapper'>IBS Central</span></span>
-            </a>        
+        </a>        
       </li>
       <li class="">
           <a href="/ibs-central/i-have-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>I have IBS</span></span>
-              </a>
+          </a>
       </li>
       <li class="">
           <a href="/about-fodmap-and-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>About FODMAP</span></span>
-              </a>        
+          </a>        
       </li>
       <li class="">
           <a href="/online-training/"><span class='text-wrapper'><span class='text-inner-wrapper'>Online Courses</span></span>
-              </a>        
+          </a>        
       </li>
       <li class=" last">
           <a href="/product-and-recipe-certification-program/"><span class='text-wrapper'><span class='text-inner-wrapper'>Product and Recipe Certification Program</span></span>
-              </a>        
+          </a>        
       </li>
     </ul>
   </div>
