--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the Homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.top-menu {
+  background-color: #e6e7e8;
+  height: 50px;
+}
+
+.wrapper {
+  display: block;
+  max-width: 1200px;
+  padding: 0 0;
+  margin: auto;
+  box-sizing: border-box;
+}
+
+.navbar-nav {  
+  display: flex;
+}
+
+.top-menu .navbar-nav li {
+  padding-left: 20px;
+}
+
+.top-menu .navbar-nav li a {
+  height: 50px;
+  display: inline-block;
+  color: #1e1934;
+  font-family: HelveticaNeueW01-67MdCn_692710,Arial,serif;
+  font-size: 15px;
+  text-decoration: none;
+  padding: 15px 0;
+  margin: 0;
+}
