--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -5,7 +5,30 @@
 
 .top-menu {
   background-color: #e6e7e8;
-  height: 50px;
+  height: 100px;
+    .navbar-nav {  
+      display: -webkit-flex;
+      display: flex;
+      -webkit-justify-content: flex-start;
+      justify-content: flex-start;
+        li {
+          padding: 20px;
+        }
+        li a {
+          height: 50px;
+          display: inline-block;
+          color: #1e1934;
+          font-family: HelveticaNeueW01-67MdCn_692710,Arial,serif;
+          font-size: 15px;
+          text-decoration: none;
+          padding: 15px 0;
+          margin: 0;
+        }
+        li:nth-of-type(1)  {
+          padding-left: 20px;
+          margin-left: auto; 
+        }
+    }        
 }
 
 .wrapper {
@@ -16,21 +39,9 @@
   box-sizing: border-box;
 }
 
-.navbar-nav {  
-  display: flex;
-}
-
-.top-menu .navbar-nav li {
-  padding-left: 20px;
-}
-
-.top-menu .navbar-nav li a {
-  height: 50px;
-  display: inline-block;
-  color: #1e1934;
-  font-family: HelveticaNeueW01-67MdCn_692710,Arial,serif;
-  font-size: 15px;
-  text-decoration: none;
-  padding: 15px 0;
-  margin: 0;
+.logo{
+  img {
+    height: 100px;
+    padding: 5px 0;
+  }
 }
