--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -2,26 +2,21 @@
 <div class="top-menu">
 	<div class="wrapper">			
     <ul class="nav navbar-nav">
+    <a class="logo" href="#">
+      <img src="/assets/test.jpg" alt="test">
+    </a>  
       <li class="">
-        <a href="/ibs-central/"><span class='text-wrapper'><span class='text-inner-wrapper'>IBS Central</span></span>
+        <a href="/ibs-central/"><span class='text-wrapper'><span class='text-inner-wrapper'>FODMAPについて</span></span>
         </a>        
       </li>
       <li class="">
-          <a href="/ibs-central/i-have-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>I have IBS</span></span>
+          <a href="/ibs-central/i-have-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>レシピ</span></span>
           </a>
-      </li>
-      <li class="">
-          <a href="/about-fodmap-and-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>About FODMAP</span></span>
-          </a>        
-      </li>
-      <li class="">
-          <a href="/online-training/"><span class='text-wrapper'><span class='text-inner-wrapper'>Online Courses</span></span>
-          </a>        
-      </li>
-      <li class=" last">
-          <a href="/product-and-recipe-certification-program/"><span class='text-wrapper'><span class='text-inner-wrapper'>Product and Recipe Certification Program</span></span>
-          </a>        
-      </li>
+      </li>  
+      <li class="login">
+          <a href="/ibs-central/i-have-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>ログイン</span></span>
+          </a>
+      </li>     
     </ul>
   </div>
 </div>
