--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -13,9 +13,15 @@
           <a href="/ibs-central/i-have-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>レシピ</span></span>
           </a>
       </li>  
-      <li class="login">
-          <a href="/ibs-central/i-have-ibs/"><span class='text-wrapper'><span class='text-inner-wrapper'>ログイン</span></span>
-          </a>
+      <li class="login"> 
+        <% if user_signed_in? %>
+          <%# <strong><%= link_to current_user.username, pages_show_path %></strong> 
+          <%= link_to 'プロフィール変更', edit_user_registration_path %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to 'サインアップ', new_user_registration_path %>
+          <%= link_to 'ログイン', new_user_session_path %>
+        <% end %>
       </li>     
     </ul>
   </div>
