--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,17 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<% provide :title, "Sign up" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label :firstName %><br />
+    <%= f.text_field :firstName, autofocus: true, autocomplete: "firstName" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :lastName %><br />
+    <%= f.text_field :lastName, autofocus: true, autocomplete: "lastName" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
