--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="top-menu">
 	<div class="wrapper">			
     <ul class="nav navbar-nav">
-    <a class="logo" href="#">
+    <a class="logo" href="/">
       <img src="/assets/test.jpg" alt="test">
     </a>  
       <li class="">
