Add user page and new logo

--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -1,3 +1,21 @@
+// @mixin box_sizing {
+//   -moz-box-sizing:    border-box;
+//   -webkit-box-sizing: border-box;
+//   box-sizing:         border-box;
+// }
+/* miscellaneous */
+
+.debug_dump {
+  text-align: center;
+  background-color: black;
+  color: #14d814;
+}
+
+
+
+
+
+
 label {
   color: #1a8bbb;
   min-width: 100px;
