--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 	<div class="wrapper">			
     <ul class="nav navbar-nav">
     <a class="logo" href="/">
-      <img src="/assets/test.jpg" alt="test">
+      <img src="/assets/abdomon.jpg" alt="test">
     </a>  
       <li class="">
         <%= link_to 'テスト', recipes_index_path %> 
