--- a/app/views/devise/registrations/detail.html.erb
+++ b/app/views/devise/registrations/detail.html.erb
@@ -1,1 +1,8 @@
-test
+<% provide(:title, @user.firstName) %>
+
+<div class="wrapper">
+  <h1>
+    <%= gravatar_for @user %>
+    <%= @user.firstName %>
+  </h1>
+</div>
