--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
-    <%= render 'layouts/footer' %>
+    <%= render 'layouts/footer' %>  
+      <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
