--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,7 @@
       </li>  
       <li class="login"> 
         <% if user_signed_in? %>
+          <%= render 'shared/user_info' %>          
           <%# <strong><%= link_to current_user.username, pages_show_path %></strong> 
           <%= link_to 'プロフィール変更', edit_user_registration_path %>
           <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
