Add upload picture for recipe format

--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -5,6 +5,7 @@
       <%= recipe.user.firstName+recipe.user.lastName %>
     </span>
     <span class="content"><%= recipe.content %></span>
+      <%= image_tag recipe.picture.url if recipe.picture? %>
     <span class="timestamp">
       Posted <%= time_ago_in_words(recipe.created_at) %> ago.
       <%= link_to "delete", recipe, method: :delete, data: { confirm: "You sure?" } %>
