--- a/app/views/recipes/_recipe_form.html.erb
+++ b/app/views/recipes/_recipe_form.html.erb
@@ -1,7 +1,17 @@
 <%= form_for(@recipe) do |f| %>
-  <%# <%= render 'shared/error_messages', object: f.object %>
+  <%= render 'shared/error_messages', model: f.object %>
   <div class="field">
     <%= f.text_area :content, placeholder: "新しいレシピを投稿する" %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
+  <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
 <% end %>
+
+<%# <script type="text/javascript">
+  $('#recipe_picture').bind('change', function() {
+    var size_in_megabytes = this.files[0].size/1024/1024;
+    if (size_in_megabytes > 5) {
+      alert('Maximum file size is 5MB. Please choose a smaller file.');
+    }
+  });
+</script> %>
