fix #15 add about page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <img src="/assets/abdomon.jpg" alt="test">
     </a>  
       <li class="">
-        <%= link_to 'テスト', recipes_index_path %> 
+        <%= link_to 'FODMAPについて', about_path %> 
       </li>
       <li class="">
         <%= link_to 'レシピ', recipes_index_path %>
