fix #10 fix validation for recipe form

--- a/app/views/devise/registrations/detail.html.erb
+++ b/app/views/devise/registrations/detail.html.erb
@@ -1,18 +1,10 @@
 <% provide(:title, @user.firstName+@user.lastName) %>
 
 <div class="wrapper">
+<%= link_to 'プロフィール変更', edit_user_registration_path %>
   <h1>
     <%= gravatar_for @user %>
     <%= @user.firstName+@user.lastName %>
-  </h1>
-  <%= render 'recipes/recipe_form' %>
-    <div class="col-md-8">    
-    <% if @user.recipes.any? %>
-      <h3>Recipes (<%= @user.recipes.count %>)</h3>
-      <ol class="recipes">
-        <%= render 'recipes/recipe' %>
-      </ol>
-      <%# <%= will_paginate @recipes %> 
-    <% end %>
+  </h1
   </div>
 </div>
