--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,13 +8,11 @@
         <%= link_to 'FODMAPについて', about_path %> 
       </li>
       <li class="">
-        <%= link_to 'レシピ', recipes_index_path %>
+        <%= link_to '自分のレシピ', recipes_path %>
       </li>  
       <li class="login"> 
         <% if user_signed_in? %>
-          <%= render 'shared/user_info' %>          
-          <%# <strong><%= link_to current_user.username, pages_show_path %></strong> 
-          <%= link_to 'プロフィール変更', edit_user_registration_path %>
+          <span><%= link_to "プロフィール   ", "/user/#{current_user.id}" %></span>                            
           <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to 'サインアップ', new_user_registration_path %>
