--- a/app/views/recipes/_recipe_form.html.erb
+++ b/app/views/recipes/_recipe_form.html.erb
@@ -8,11 +8,11 @@
   
 <% end %>
 
-<%# <script type="text/javascript">
+<script type="text/javascript">
   $('#recipe_picture').bind('change', function() {
     var size_in_megabytes = this.files[0].size/1024/1024;
     if (size_in_megabytes > 5) {
-      alert('Maximum file size is 5MB. Please choose a smaller file.');
+      alert('写真サイズは5MBまでとなっております。サイズを下げてください。');
     }
   });
-</script> %>
+</script>
