--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,4 +1,7 @@
-<% @recipes.each do |recipe| %>
-    <%= recipe.id %>
-    <%= recipe.content %>
-  <% end %>
+<% @feed_items.each do |feed_item| %>
+  <li>
+    <%= link_to feed_item.user.firstName, "/user/#{feed_item.user_id}" %>
+    <%= feed_item.id %>
+    <%= feed_item.content %>
+  </li>
+<% end %>
