fix #27 add proper recipe form

--- a/app/views/recipes/_recipe.html.haml
+++ b/app/views/recipes/_recipe.html.haml
@@ -1,10 +1,20 @@
-- @recipes.each do |recipe|
-  %li{:id => "recipe-#{recipe.id}"}
-    = link_to current_user.firstName, "/user/#{current_user.id}"
-    %span.user
-      = recipe.user.firstName+recipe.user.lastName
-    %span.content= recipe.title
-    %span.content= recipe.content
-    = image_tag recipe.picture.url if recipe.picture?
-    %span.timestamp
-      = link_to "delete", recipe, method: :delete, data: { confirm: "You sure?" }
+-# - @recipes.each do |recipe|
+-#   %li{:id => "recipe-#{recipe.id}"}
+-#     = link_to current_user.firstName, "/user/#{current_user.id}"
+-#     %span.user
+-#       = recipe.user.firstName+recipe.user.lastName
+-#     %span.content= recipe.title
+-#     %span.content= recipe.content
+-#     = image_tag recipe.picture.url if recipe.picture?
+-#     %span.timestamp
+-#       = link_to "delete", recipe, method: :delete, data: { confirm: "You sure?" }
+
+- @recipes.each_slice(3) do |recipes|
+	.row
+		- recipes.each do |recipe|
+			.col-md-4
+				.recipe
+					.image_wrapper
+						= link_to recipe do
+							= image_tag recipe.picture.url if recipe.picture?
+					%h2= link_to recipe.title, recipe
