--- a/app/views/devise/registrations/detail.html.haml
+++ b/app/views/devise/registrations/detail.html.haml
@@ -1,13 +1,10 @@
 - provide(:title, @user.firstName+@user.lastName)
 %section.stats
   = render 'shared/stats'
-%li
-  ここと
 = render 'shared/follow_form' if user_signed_in?
-%li
-  ここの間
 .wrapper
   = link_to 'プロフィール変更', edit_user_registration_path
   %h1
     = gravatar_for @user
     = @user.firstName+@user.lastName
+  = render 'recipes/recipe'
