--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,9 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render 'layouts/header'
-    %p.notice= notice
-    %p.alert= alert
-    = yield
+    .container
+      %p.notice= notice
+      %p.alert= alert
+      = yield
     = render 'layouts/footer'
     = debug(params) if Rails.env.development?
