--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -10,7 +10,10 @@
 					Submitted by
 					= link_to @recipe.user.firstName, "/user/#{@recipe.user_id}"					
 	.row
+		%p
+			タグ: #{raw(@recipe.tag_list.map { |t| link_to t, tag_path(t) }.join(', '))}
 		.col-md-12
+		
 			= link_to "Back", :back, class: "btn btn-default"
 			- if current_user.id === @recipe.user_id
 				= link_to "Edit", edit_recipe_path, class: "btn btn-default"
