fix #36 add checkbox for tags

--- a/app/views/recipes/_recipe_form.html.haml
+++ b/app/views/recipes/_recipe_form.html.haml
@@ -5,8 +5,29 @@
     = f.text_field :title, placeholder: "タイトル(ex. カレー)"
     = f.text_area :content, placeholder: recipe_sample
   .field
-    = f.label :tag_list, 'タグをカンマ区切りで入力'
-    = f.text_field :tag_list
+    .tag-title
+      %h3
+        レシピのカテゴリーを選択してください。    
+    .form-check    
+      = f.check_box :tag_list, { :multiple => true }, 'ラクトースフリー', nil
+      .tag-title
+        %check-box-label{for: "recipe_tag_list_ラクトースフリー"} ラクトースフリー
+    .form-check
+      = f.check_box :tag_list, { :multiple => true }, 'グルテンフリー', nil
+      .tag-title
+        %check-box-label{for: "recipe_tag_list_グルテンフリー"} グルテンフリー
+    .form-check  
+      = f.check_box :tag_list, { :multiple => true }, 'ベジタリアン', nil
+      .tag-title
+        %check-box-label{for: "recipe_tag_list_ベジタリアン"} ベジタリアン
+    .form-check  
+      = f.check_box :tag_list, { :multiple => true }, 'ビーガン', nil
+      .tag-title
+        %check-box-label{for: "recipe_tag_list_ビーガン"} ビーガン
+    -# Doesnt work with checkbox  
+    -# .form-group      
+    -#   %tag-text-list{for: "recipe_tag_list"} タグをカンマ区切りで入力
+    -#   = f.text_field :tag_list
   = f.submit "Post", class: "btn btn-primary"
 :javascript
   $('#recipe_picture').bind('change', function() {
@@ -15,3 +36,6 @@
       alert('写真サイズは5MBまでとなっております。サイズを下げてください。');
     }
   });
+
+
+
