--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,12 +66,16 @@ body {
 	margin-bottom: 40px;
 	@include box-shadow;
 	.image_wrapper {
-		max-width: 100%;
+		width: 360px;
+		height: 300px;
+		// max-width: 100%;
+		// max-height: 100%;
 		border-radius: 5px 5px 0 0;
 		overflow: hidden;
 	}
 	img {
 		width: 100%;
+		height: 100%;
 		-webkit-transition: all .3s ease-out;
 	  -moz-transition: all .3s ease-out;
 	  -o-transition: all .3s ease-out;
