--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,7 +10,7 @@
           = link_to '自分のレシピ', recipes_path
       %li.login
         - if user_signed_in?
-          %span= link_to "プロフィール   ", "/user/#{current_user.id}"
+          %span= link_to " マイページ  ", "/user/#{current_user.id}"
           = link_to 'ログアウト', destroy_user_session_path, method: :delete
         - else
           = link_to 'サインアップ', new_user_registration_path
