--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,7 @@ body {
 	img {
 		width: 100%;
 		height: 100%;
+		object-fit:cover;
 		-webkit-transition: all .3s ease-out;
 	  -moz-transition: all .3s ease-out;
 	  -o-transition: all .3s ease-out;
