--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,6 +10,8 @@
           = link_to '自分のレシピ', recipes_path
         %li
           = link_to 'お気に入り', recipes_liked_path  
+        %li
+          = link_to '検索', recipes_search_path  
       %li.login
         - if user_signed_in?
           %span= link_to " マイページ  ", "/user/#{current_user.id}"
