--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "bootstrap";
 @import "reset";
 @import "common";
+@import "likes";
+@import "homes";
 @import "form_element";
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -25,7 +27,7 @@
 	box-shadow: rgba(0, 0, 0, 0.09) 0 2px 0;
 }
 
-$red: #DB6161;
+$red: #333;
 
 body {
 	background: rgb(235, 238, 243);
@@ -60,9 +62,12 @@ body {
 	}
 }
 
+// =============================================================================
+// recipe
+// =============================================================================
 .recipe {
 	background: white;
-	border-radius: 5px;
+	border-radius: 30px;
 	margin-bottom: 40px;
 	@include box-shadow;
 	.image_wrapper {
@@ -70,7 +75,7 @@ body {
 		height: 300px;
 		// max-width: 100%;
 		// max-height: 100%;
-		border-radius: 5px 5px 0 0;
+		border-radius: 30px 30px 0 0;
 		overflow: hidden;
 	}
 	img {
@@ -154,23 +159,6 @@ body {
 	margin-top: 25px;
 }
 
-
-
-// like button
-.iine__button{
-	background: linear-gradient(to right, #feb400, #FFE300);
-	line-height: 42px;
-	color: #6d3701;
-	font-size: 14px;
-	display: inline-block;
-	padding: 0 18px;
-	border-radius: 100px;
-	font-weight: bold;
-}
-
-
-
-// recipe form
 .form-check {
   display: flex;
 }
@@ -178,3 +166,9 @@ body {
 .tag-title {
 	margin-left: -32px;
 }
+// =============================================================================
+// end recipe
+// =============================================================================
+
+
+
