--- a/app/assets/stylesheets/likes.scss
+++ b/app/assets/stylesheets/likes.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the likes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// like button
+.iine__button{
+	line-height: 42px;
+	color: #6d3701;
+	font-size: 14px;
+	display: inline-block;
+	padding: 0 18px;
+	border-radius: 100px;
+	font-weight: bold;
+	span {
+		color: red;
+	}
+}
+
+.like-link {
+	text-align: right;
+}
